Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn18/sn18.22_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn18/sn18.22_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn18/sn18.22_translation-de-sabbamitta.json
@@ -10,6 +10,6 @@
   "sn18.22:2.2": "jegliche Art von Wahrnehmung … ",
   "sn18.22:2.3": "jegliche Art von Entscheidungen … ",
   "sn18.22:2.4": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit sieht: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst‘, dann ist man durch Nicht-Ergreifen befreit. ",
-  "sn18.22:2.5": "Auf diese Art erkennt und sieht man, sodass der Geist sich von Ich-Machen, Mein-Machen und Einbildung für diesen mit Bewusstsein versehenen Körper und für alle äußeren Reize losmacht; und dass er über Unterscheidung hinausgeht und friedvoll und gut befreit ist.“ ",
+  "sn18.22:2.5": "Auf diese Art erkennt und sieht man, sodass der Geist sich von Sich-Identifizieren, Sich-Aneignen und Einbildung für diesen mit Bewusstsein versehenen Körper und für alle äußeren Reize losmacht; und dass er über Unterscheidung hinausgeht und friedvoll und gut befreit ist.“ ",
   "sn18.22:3.7": "Die Verbundenen Lehrreden mit Rāhula sind abgeschlossen. "
 }
