--- a/translation/de/sabbamitta/sutta/an/an3/an3.33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.33_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an3.33:1.7": "Der Buddha lehre den Dhamma kurz, ausführlich und sowohl kurz als auch ausführlich. ",
   "an3.33:1.8": "Da werden Menschen sein, die die Lehre verstehen!“ ",
   "an3.33:2.1": "„Daher, Sāriputta, sollt ihr euch so schulen: ",
-  "an3.33:2.2": "‚Es wird kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper geben, noch für alle äußeren Reize; und wir werden im Besitz der Freiheit des Herzens leben, der Freiheit durch Weisheit, wo Ich-Machen, Mein-Machen und zugrunde liegende Neigung zur Einbildung nicht mehr sind.‘ ",
+  "an3.33:2.2": "‚Es wird kein Sich-Identifizieren, kein Sich-Aneignen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper geben, noch für alle äußeren Reize; und wir werden im Besitz der Freiheit des Herzens leben, der Freiheit durch Weisheit, wo Sich-Identifizieren, Sich-Aneignen und zugrunde liegende Neigung zur Einbildung nicht mehr sind.‘ ",
   "an3.33:2.3": "So sollt ihr euch schulen. ",
   "an3.33:3.1": "Wenn ein Mönch oder eine Nonne kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper hat, noch für alle äußeren Reize; und wenn diese Person im Besitz der Freiheit des Herzens lebt, der Freiheit durch Weisheit, wo Ich-Machen, Mein-Machen und zugrunde liegende Neigung zur Einbildung nicht mehr sind – ",
   "an3.33:3.2": "dann nennt man sie ",
