--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "mn109:12.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. ",
   "mn109:12.13": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen seine nachteiligen Folgen. ",
   "mn109:12.14": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen von ihm.“ ",
-  "mn109:13.1": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize?“ ",
+  "mn109:13.1": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Sich-Identifizieren, kein Sich-Aneignen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize?“ ",
   "mn109:13.2": "„Mönch, man sieht jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "mn109:13.3": "Man sieht jegliche Art von Gefühl … ",
   "mn109:13.4": "jegliche Art von Wahrnehmung … ",
