--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -81,7 +81,7 @@
   "sn22.82:11.4": "jegliche Art von Wahrnehmung … ",
   "sn22.82:11.5": "jegliche Art von Entscheidungen … ",
   "sn22.82:11.6": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
-  "sn22.82:11.7": "Auf diese Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize.“ ",
+  "sn22.82:11.7": "Auf diese Art erkennt und sieht man, sodass es kein kein Sich-Identifizieren, kein Sich-Aneignen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize.“ ",
   "sn22.82:12.1": "Da kam zu dieser Zeit einem der Mönche dieser Gedanke in den Sinn: ",
   "sn22.82:12.2": "„So scheint es, guter Herr, dass Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein ohne Selbst sind. ",
   "sn22.82:12.3": "Welches Selbst werden dann die Taten betreffen, die von etwas, das ohne Selbst ist, begangen wurden?“ ",
