--- a/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an6.55:3.4": "Warum breche ich nicht die Schulung ab und wende mich wieder einem geringeren Leben zu, sodass ich mein Vermögen genießen und Verdienst schaffen kann?‘“ ",
   "an6.55:3.5": "„Ja, Herr.“ ",
   "an6.55:4.1": "„Was denkst du, Soṇa? ",
-  "an6.55:4.2": "Als du noch ein Laie warst, warst du da nicht ein guter Harfenist?“ ",
+  "an6.55:4.2": "Als du noch ein Laie warst, warst du da nicht ein guter Bogenharfenspieler?“ ",
   "an6.55:4.3": "„Ja, Herr.“ ",
   "an6.55:4.4": "„Wenn die Saiten deiner Harfe zu straff gespannt waren, hat sie da richtig geklungen und war zu gebrauchen?“ ",
   "an6.55:4.5": "„Nein, Herr.“ ",
