--- a/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an6.56:0.3": "Mit Phagguna ",
   "an6.56:1.1": "Zu dieser Zeit nun war der Ehrwürdige Phagguna mitgenommen, leidend, schwer krank. ",
   "an6.56:1.2": "Da ging der Ehrwürdige Ānanda zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "an6.56:1.3": "„Herr, der Ehrwürdige Phagguṇa ist mitgenommen, leidend, schwer krank. ",
+  "an6.56:1.3": "„Herr, der Ehrwürdige Phagguna ist mitgenommen, leidend, schwer krank. ",
   "an6.56:1.4": "Herr, bitte geh aus Anteilnahme zum Ehrwürdigen Phagguṇa.“ ",
   "an6.56:1.5": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "an6.56:1.6": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zum Ehrwürdigen Phagguṇa. ",
