--- a/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an6.56:1.3": "„Herr, der Ehrwürdige Phagguna ist mitgenommen, leidend, schwer krank. ",
   "an6.56:1.4": "Herr, bitte geh aus Anteilnahme zum Ehrwürdigen Phagguna.“ ",
   "an6.56:1.5": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
-  "an6.56:1.6": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zum Ehrwürdigen Phagguṇa. ",
+  "an6.56:1.6": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zum Ehrwürdigen Phagguna. ",
   "an6.56:1.7": "Der Ehrwürdige Phagguṇa sah den Buddha von Weitem kommen ",
   "an6.56:1.8": "und versuchte, sich auf seiner Liege aufzurichten. ",
   "an6.56:1.9": "Der Buddha sagte zu ihm: ",
