--- a/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an6.56:1.11": "Hier sind von anderen Sitze ausgelegt, da werde ich mich hinsetzen.“ ",
   "an6.56:1.12": "Er setzte sich auf einen ausgebreiteten Sitz ",
   "an6.56:1.13": "und sagte zum Ehrwürdigen Phagguna: ",
-  "an6.56:2.1": "„Ich hoffe, es geht dir leidlich, Phagguṇa, ich hoffe, du kommst zurecht. Und ich hoffe, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.“ ",
+  "an6.56:2.1": "„Ich hoffe, es geht dir leidlich, Phagguna, ich hoffe, du kommst zurecht. Und ich hoffe, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.“ ",
   "an6.56:2.2": "„Herr, es geht mir nicht leidlich, ich komme nicht zurecht. Der Schmerz ist schrecklich und nimmt zu, er lässt nicht nach, ein Zunehmen ist erkennbar, kein Nachlassen. ",
   "an6.56:3.1": "Wie wenn ein starker Mann eine scharfe Spitze in meinen Kopf bohren würde: So heftig sind die bohrenden Winde, die mir den Kopf zermartern. ",
   "an6.56:3.2": "Es geht mir nicht leidlich. ",
