--- a/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "an6.56:6.1": "Wie wenn zwei starke Männer einen schwächeren Mann an den Armen packen würden, um ihn über einer Grube mit glühenden Kohlen zu verbrennen und zu schmoren: So heftig ist das Brennen in meinem Körper. ",
   "an6.56:6.2": "Es geht mir nicht leidlich, ich komme nicht zurecht. Der Schmerz ist schrecklich und nimmt zu, er lässt nicht nach, ein Zunehmen ist erkennbar, kein Nachlassen.“ ",
   "an6.56:6.3": "Dann leitete der Buddha den Ehrwürdigen Phagguna mit einem Dhammavortrag an, ermunterte ihn, begeisterte ihn und regte ihn an. Darauf erhob er sich von seinem Sitz und ging. ",
-  "an6.56:7.1": "Nicht lange, nachdem der Buddha gegangen war, starb der Ehrwürdige Phagguṇa. ",
+  "an6.56:7.1": "Nicht lange, nachdem der Buddha gegangen war, starb der Ehrwürdige Phagguna. ",
   "an6.56:7.2": "Zur Zeit seines Todes waren seine Sinne klar. ",
   "an6.56:7.3": "Da ging der Ehrwürdige Ānanda zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "an6.56:7.4": "„Herr, nicht lange, nachdem der Buddha gegangen war, ist der Ehrwürdige Phagguṇa gestorben. ",
