--- a/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.56_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "an6.56:7.4": "„Herr, nicht lange, nachdem der Buddha gegangen war, ist der Ehrwürdige Phagguna gestorben. ",
   "an6.56:7.5": "Zur Zeit seines Todes waren seine Sinne klar.“ ",
   "an6.56:8.1": "„Und warum sollten seine Sinne nicht klar gewesen sein? ",
-  "an6.56:8.2": "Der Geist des Mönchs Phagguṇa war nicht von den fünf niederen Fesseln befreit. ",
+  "an6.56:8.2": "Der Geist des Mönchs Phagguna war nicht von den fünf niederen Fesseln befreit. ",
   "an6.56:8.3": "Aber als er diese Unterweisung hörte, wurde sein Geist von ihnen befreit. ",
   "an6.56:9.1": "Ānanda, es gibt sechs vorteilhafte Folgen davon, zur rechten Zeit die Lehre zu hören und die Bedeutung zur rechten Zeit zu untersuchen. ",
   "an6.56:9.2": "Welche sechs? ",
