--- a/translation/de/sabbamitta/sutta/an/an8/an8.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.12_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "an8.12:3.1": "„Aber Sīha, du glaubst an die Doktrin des Tuns. Warum solltest du den Asketen Gotama besuchen gehen, der eine Doktrin des Nicht-Tuns lehrt? ",
   "an8.12:3.2": "Denn der Asket Gotama glaubt an eine Doktrin des Nicht-Tuns, er lehrt das Nicht-Tun, und so schult er seine Schüler.“ ",
   "an8.12:3.3": "Und Sīhas Entschlossenheit, den Buddha zu besuchen, klang ab. ",
-  "an8.12:4.1": "Ein zweites Mal saßen mehrere sehr bedeutende Licchaver in der Versammlungshalle beisammen und priesen den Buddha, seine Lehre und den Saṅgha auf vielerlei Art. ",
+  "an8.12:4.1": "Ein zweites Mal saßen mehrere sehr bedeutende Licchaver im Rathaus beisammen und priesen den Buddha, seine Lehre und den Saṅgha auf vielerlei Art. ",
   "an8.12:4.2": "Und zum zweiten Mal dachte Sīha: ",
   "an8.12:4.3": "„Dieser Gesegnete muss zweifellos ein Vollendeter sein, ein vollkommen erwachter Buddha. Denn einige sehr bedeutende Licchaver preisen den Buddha, seine Lehre und den Saṅgha auf vielerlei Art. ",
   "an8.12:4.4": "Warum gehe ich nicht diesen Gesegneten, den Vollendeten, den vollkommen erwachten Buddha besuchen?“ ",
