--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "dn33:1.2.1": "Nun war da gerade kürzlich für die Maller von Pāvā ein neues Rathaus mit Namen Ubbhaṭaka erbaut worden. Bisher war es noch von keinem Asketen oder Brahmanen oder von irgendjemandem benutzt worden. ",
   "dn33:1.2.2": "Die Maller von Pāvā hörten nun, dass der Buddha angekommen war und sich in Cundas Mangowäldchen aufhielt. ",
   "dn33:1.2.3": "Da gingen sie zum Buddha, verbeugten sich, setzten sich zur Seite hin und sagten zu ihm: ",
-  "dn33:1.2.4": "„Herr, kürzlich wurde für die Maller von Pāvā eine neue Stadthalle mit Namen Ubbhaṭaka erbaut. Sie ist noch von keinem Asketen oder Brahmanen oder von irgendjemandem benutzt worden. ",
+  "dn33:1.2.4": "„Herr, kürzlich wurde für die Maller von Pāvā ein neues Rathaus mit Namen Ubbhaṭaka erbaut. Es ist noch von keinem Asketen oder Brahmanen oder von irgendjemandem benutzt worden. ",
   "dn33:1.2.5": "Der Buddha möchte der Erste sein, der sie benutzt, und erst danach wollen die Maller von Pāvā sie benutzen. ",
   "dn33:1.2.6": "Das wäre zum langanhaltenden Nutzen und Glück der Maller von Pāvā.“ ",
   "dn33:1.2.7": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
