--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "dn33:1.2.5": "Der Buddha möchte der Erste sein, der es benutzt, und erst danach wollen die Maller von Pāvā es benutzen. ",
   "dn33:1.2.6": "Das wäre zum langanhaltenden Nutzen und Glück der Maller von Pāvā.“ ",
   "dn33:1.2.7": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
-  "dn33:1.3.1": "Da erhoben sich, als sie die Zustimmung des Buddha erkannt hatten, die Maller von ihren Sitzen, verbeugten sich und umrundeten den Buddha respektvoll, die rechte Seite ihm zugewandt. Dann gingen sie zu ihrer neuen Stadthalle, breiteten überall Teppiche aus, richteten Sitze her, stellten einen Krug mit Wasser auf und brachten eine Lampe. Dann gingen sie zum Buddha zurück, ",
+  "dn33:1.3.1": "Da erhoben sich, als sie die Zustimmung des Buddha erkannt hatten, die Maller von ihren Sitzen, verbeugten sich und umrundeten den Buddha respektvoll, die rechte Seite ihm zugewandt. Dann gingen sie zu ihrem neuen Rathaus, breiteten überall Teppiche aus, richteten Sitze her, stellten einen Krug mit Wasser auf und brachten eine Lampe. Dann gingen sie zum Buddha zurück, ",
   "dn33:1.3.2": "verbeugten sich, stellten sich zur Seite hin, ",
   "dn33:1.3.3": "berichteten über ihre Vorbereitungen ",
   "dn33:1.3.4": "und sagten: ",
