--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "dn33:1.3.3": "berichteten über ihre Vorbereitungen ",
   "dn33:1.3.4": "und sagten: ",
   "dn33:1.3.5": "„Bitte, Herr, komm nach deinem Belieben.“ ",
-  "dn33:1.4.1": "Da kleidete der Buddha sich an, nahm Schale und Robe und ging zusammen mit dem Saṅgha der Mönche und Nonnen zu der neuen Stadthalle. Er wusch seine Füße, betrat die Stadthalle und setzte sich gegen den Mittelpfeiler mit Blick nach Osten. ",
+  "dn33:1.4.1": "Da kleidete der Buddha sich an, nahm Schale und Robe und ging zusammen mit dem Saṅgha der Mönche und Nonnen zu dem neuen Rathaus. Er wusch seine Füße, betrat das Rathaus und setzte sich gegen den Mittelpfeiler mit Blick nach Osten. ",
   "dn33:1.4.2": "Auch der Saṅgha der Mönche und Nonnen wusch seine Füße, betrat die Stadthalle und setzte sich gegen die westliche Wand mit Blick nach Osten, sodass der Buddha vor ihnen saß. ",
   "dn33:1.4.3": "Auch die Maller von Pāvā wuschen ihre Füße, betraten die Stadthalle und setzten sich gegen die östliche Wand mit Blick nach Westen, sodass der Buddha vor ihnen saß. ",
   "dn33:1.4.4": "Den größten Teil der Nacht verbrachte der Buddha damit, die Maller mit einem Dhammavortrag anzuleiten, zu ermuntern, zu begeistern und anzuregen. Dann entließ er sie mit den Worten: ",
