--- a/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "sn55.4:0.1": "Les Discours Regroupés par Thèmes 55.4"
+  "sn55.4:0.1": "Les Discours Regroupés par Thèmes 55.4",
+  "sn55.4:0.2": "À Véloudvara"
 }
