--- a/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
@@ -1,5 +1,6 @@
 {
   "sn55.4:0.1": "Les Discours Regroupés par Thèmes 55.4",
   "sn55.4:0.2": "À Véloudvara",
-  "sn55.4:0.3": "Avec Saripoutta (1)"
+  "sn55.4:0.3": "Avec Saripoutta (1)",
+  "sn55.4:1.1": "Un jour, le vénérable Saripoutta séjournait près de Savatthi, dans le bois de Jéta, le parc d’Anathapindika."
 }
