Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "sn55.4:1.2": "Ce jour-là, le vénérable Ananda sortit de l’isolement (…) s’assit d’un côté et dit au vénérable Saripoutta :",
   "sn55.4:1.3": "Ami Saripoutta, combien de qualités les gens doivent-ils posséder pour que le Fortuné déclare qu’ils sont des parvenus-au-courant, délivrés des mondes inférieurs, infailliblement destinés à l’éveil ?",
   "sn55.4:1.4": "Ami, les gens doivent posséder quatre qualités pour que le Fortuné déclare qu’ils sont des parvenus-au-courant, délivrés des mondes inférieurs, infailliblement destinés à l’éveil.",
-  "sn55.4:2.1": "Quelles sont ces quatre qualités ?"
+  "sn55.4:2.1": "Quelles sont ces quatre qualités ?",
+  "sn55.4:2.2": "À cet égard, ami, un noble disciple possède une confiance vérifiée dans le Bouddha :"
 }
