--- a/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.4_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "sn55.4:1.3": "Ami Saripoutta, combien de qualités les gens doivent-ils posséder pour que le Fortuné déclare qu’ils sont des parvenus-au-courant, délivrés des mondes inférieurs, infailliblement destinés à l’éveil ?",
   "sn55.4:1.4": "Ami, les gens doivent posséder quatre qualités pour que le Fortuné déclare qu’ils sont des parvenus-au-courant, délivrés des mondes inférieurs, infailliblement destinés à l’éveil.",
   "sn55.4:2.1": "Quelles sont ces quatre qualités ?",
-  "sn55.4:2.2": "À cet égard, ami, un noble disciple possède une confiance vérifiée dans le Bouddha :"
+  "sn55.4:2.2": "À cet égard, ami, un noble disciple possède une confiance vérifiée dans le Bouddha :",
+  "sn55.4:2.3": "«Assurément, ce Fortuné est un arahant véritablement éveillé, accompli en connaissance et en [bonne] conduite, sublime, connaisseur du monde, suprême guide des personnes désirant l’entraînement, enseignant des dévas et des humains, un Fortuné éveillé.»"
 }
