--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "sn55.5:0.1": "Les Discours Regroupés par Thèmes 55.5",
-  "sn55.5:0.2": "1. À Véloudvara"
+  "sn55.5:0.2": "1. À Véloudvara",
+  "sn55.5:1.1": "Un jour, le vénérable Saripoutta vint voir le Fortuné, lui rendit hommage, puis s’assit d’un côté. Une fois qu’il fut assis là, le Fortuné lui dit :"
 }
