Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -3,5 +3,6 @@
   "sn55.5:0.2": "1. À Véloudvara",
   "sn55.5:1.1": "Un jour, le vénérable Saripoutta vint voir le Fortuné, lui rendit hommage, puis s’assit d’un côté. Une fois qu’il fut assis là, le Fortuné lui dit :",
   "sn55.5:1.2": "«Saripoutta, on entend dire : “facteurs d’entrée dans le courant, facteurs d’entrée dans le courant”.",
-  "sn55.5:1.3": "Que sont donc, Saripoutta, les facteurs d’entrée dans le courant ?"
+  "sn55.5:1.3": "Que sont donc, Saripoutta, les facteurs d’entrée dans le courant ?",
+  "sn55.5:1.4": "— Bhanté, l’association avec les hommes de bien est un facteur d’entrée dans le courant, l’écoute du Dhamma authentique est un facteur d’entrée dans le courant, l’attention judicieuse est un facteur d’entrée dans le courant, la pratique de l’Enseignement au niveau des phénomènes est un facteur d’entrée dans le courant."
 }
