--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "sn55.5:1.4": "— Bhanté, l’association avec les hommes de bien est un facteur d’entrée dans le courant, l’écoute du Dhamma authentique est un facteur d’entrée dans le courant, l’attention judicieuse est un facteur d’entrée dans le courant, la pratique de l’Enseignement au niveau des phénomènes est un facteur d’entrée dans le courant.",
   "sn55.5:1.5": "— Excellent, Saripoutta, excellent !",
   "sn55.5:1.6": "L’association avec les hommes de bien est un facteur d’entrée dans le courant, l’écoute du Dhamma authentique est un facteur d’entrée dans le courant, l’attention judicieuse est un facteur d’entrée dans le courant, la pratique de l’Enseignement au niveau des phénomènes est un facteur d’entrée dans le courant.",
-  "sn55.5:2.1": "Saripoutta, on entend dire : “Le courant, le courant”."
+  "sn55.5:2.1": "Saripoutta, on entend dire : “Le courant, le courant”.",
+  "sn55.5:2.2": "Qu’est-ce donc, Saripoutta, que le courant ?"
 }
