Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -9,5 +9,6 @@
   "sn55.5:1.6": "L’association avec les hommes de bien est un facteur d’entrée dans le courant, l’écoute du Dhamma authentique est un facteur d’entrée dans le courant, l’attention judicieuse est un facteur d’entrée dans le courant, la pratique de l’Enseignement au niveau des phénomènes est un facteur d’entrée dans le courant.",
   "sn55.5:2.1": "Saripoutta, on entend dire : “Le courant, le courant”.",
   "sn55.5:2.2": "Qu’est-ce donc, Saripoutta, que le courant ?",
-  "sn55.5:2.3": "— Bhanté, le courant n’est autre que cette noble voie à huit composantes, c’est-à-dire :"
+  "sn55.5:2.3": "— Bhanté, le courant n’est autre que cette noble voie à huit composantes, c’est-à-dire :",
+  "sn55.5:2.4": "la vue correcte, l’aspiration correcte, la parole correcte, l’action correcte, les moyens de subsistance corrects, l’effort correct, la présence d’esprit correcte et la concentration correcte."
 }
