Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -10,5 +10,6 @@
   "sn55.5:2.1": "Saripoutta, on entend dire : “Le courant, le courant”.",
   "sn55.5:2.2": "Qu’est-ce donc, Saripoutta, que le courant ?",
   "sn55.5:2.3": "— Bhanté, le courant n’est autre que cette noble voie à huit composantes, c’est-à-dire :",
-  "sn55.5:2.4": "la vue correcte, l’aspiration correcte, la parole correcte, l’action correcte, les moyens de subsistance corrects, l’effort correct, la présence d’esprit correcte et la concentration correcte."
+  "sn55.5:2.4": "la vue correcte, l’aspiration correcte, la parole correcte, l’action correcte, les moyens de subsistance corrects, l’effort correct, la présence d’esprit correcte et la concentration correcte.",
+  "sn55.5:2.5": "— Excellent, Saripoutta, excellent !"
 }
