Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -11,5 +11,6 @@
   "sn55.5:2.2": "Qu’est-ce donc, Saripoutta, que le courant ?",
   "sn55.5:2.3": "— Bhanté, le courant n’est autre que cette noble voie à huit composantes, c’est-à-dire :",
   "sn55.5:2.4": "la vue correcte, l’aspiration correcte, la parole correcte, l’action correcte, les moyens de subsistance corrects, l’effort correct, la présence d’esprit correcte et la concentration correcte.",
-  "sn55.5:2.5": "— Excellent, Saripoutta, excellent !"
+  "sn55.5:2.5": "— Excellent, Saripoutta, excellent !",
+  "sn55.5:2.6": "Le courant n’est autre que cette noble voie à huit composantes, c’est-à-dire :"
 }
