Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.5_translation-fr-sekha.json
@@ -16,5 +16,6 @@
   "sn55.5:2.7": "la vue correcte, l’aspiration correcte, la parole correcte, l’action correcte, les moyens de subsistance corrects, l’effort correct, la présence d’esprit correcte et la concentration correcte.",
   "sn55.5:3.1": "Saripoutta, on entend dire : “Quelqu’un qui est entré dans le courant, quelqu’un qui est entré dans le courant”.",
   "sn55.5:3.2": "Qui donc, Saripoutta, est celui qui est entré dans le courant ?",
-  "sn55.5:3.3": "— Bhanté, quiconque possède cette noble voie à huit composantes est appelé quelqu’un qui est entré dans le courant, tel vénérable portant tel nom, issu de telle famille."
+  "sn55.5:3.3": "— Bhanté, quiconque possède cette noble voie à huit composantes est appelé quelqu’un qui est entré dans le courant, tel vénérable portant tel nom, issu de telle famille.",
+  "sn55.5:3.4": "— Excellent, Saripoutta, excellent !"
 }
