--- a/translation/fr/sekha/sutta/sn/sn55/sn55.6_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.6_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "sn55.6:0.1": "Les Discours Regroupés par Thèmes 55.6"
+  "sn55.6:0.1": "Les Discours Regroupés par Thèmes 55.6",
+  "sn55.6:0.2": "1. À Véloudvara"
 }
