--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "sn55.7:0.1": "Les Discours Regroupés par Thèmes 55.7"
+  "sn55.7:0.1": "Les Discours Regroupés par Thèmes 55.7",
+  "sn55.7:0.2": "1. À Véloudvara"
 }
