--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "sn55.7:0.1": "Les Discours Regroupés par Thèmes 55.7",
-  "sn55.7:0.2": "1. À Véloudvara"
+  "sn55.7:0.2": "1. À Véloudvara",
+  "sn55.7:1.2": "Un jour, en voyageant à pied à travers le Kosala avec un grand groupe de mendiants, le Fortuné arriva à un village de brahmanes du Kosala qui s’appelait Véloudvara."
 }
