--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -4,5 +4,6 @@
   "sn55.7:0.3": "À Véloudvara",
   "sn55.7:1.1": "Ainsi ai-je entendu :",
   "sn55.7:1.2": "Un jour, en voyageant à pied à travers le Kosala avec un grand groupe de mendiants, le Fortuné arriva à un village de brahmanes du Kosala qui s’appelait Véloudvara.",
-  "sn55.7:1.3": "Les brahmanes maîtres de maison de Véloudvara entendirent :"
+  "sn55.7:1.3": "Les brahmanes maîtres de maison de Véloudvara entendirent :",
+  "sn55.7:1.4": "«Messieurs, le renonçant Gotama, un fils des Sakyas ayant quitté le clan des Sakyas, est arrivé à Véloudvara en voyageant à pied à travers le Kosala avec un grand groupe de mendiants."
 }
