--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -9,5 +9,6 @@
   "sn55.7:1.5": "Et la bonne réputation de ce vénérable Gotama s’est répandue ainsi :",
   "sn55.7:1.6": "“Assurément, ce Fortuné est un arahant véritablement éveillé, accompli en connaissance et en [bonne] conduite, sublime, connaisseur du monde, suprême guide des personnes désirant l’entraînement, enseignant des dévas et des humains, un Fortuné éveillé.",
   "sn55.7:1.7": "Il fait connaître ce monde avec ses dévas, ses Maras, ses Brahmas, ses renonçants & brahmanes, avec cette génération de dévas et d’êtres humains, en en ayant fait lui-même l’expérience par connaissance directe.",
-  "sn55.7:1.8": "Il enseigne un Dhamma qui est bénéfique au début, bénéfique au milieu, bénéfique à la fin, avec la signification et le phrasé corrects, il présente la vie brahmique qui est entièrement complète et pure."
+  "sn55.7:1.8": "Il enseigne un Dhamma qui est bénéfique au début, bénéfique au milieu, bénéfique à la fin, avec la signification et le phrasé corrects, il présente la vie brahmique qui est entièrement complète et pure.",
+  "sn55.7:1.9": "Il est bon de voir un tel arahant”.»"
 }
