Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -12,5 +12,6 @@
   "sn55.7:1.8": "Il enseigne un Dhamma qui est bénéfique au début, bénéfique au milieu, bénéfique à la fin, avec la signification et le phrasé corrects, il présente la vie brahmique qui est entièrement complète et pure.",
   "sn55.7:1.9": "Il est bon de voir un tel arahant”.»",
   "sn55.7:2.1": "Alors les brahmanes maîtres de maison de Véloudvara approchèrent le Fortuné. S’étant approchés, certains le saluèrent respectueusement puis s’assirent d’un côté. Certains échangèrent des courtoisies avec lui, et après cet échange de courtoisies et de paroles amicales, s’assirent d’un côté. Certains s’inclinèrent devant lui avec les mains jointes puis s’assirent d’un côté. Certains annoncèrent leur nom et leur clan devant lui puis s’assirent d’un côté. Certains restèrent silencieux et s’assirent d’un côté. Une fois qu’il furent assis, les brahmanes maîtres de maison de Véloudvara dirent au Fortuné :",
-  "sn55.7:2.2": "— Sieur, Gotama, nous avons ces désirs, ces volontés, ces souhaits :"
+  "sn55.7:2.2": "— Sieur, Gotama, nous avons ces désirs, ces volontés, ces souhaits :",
+  "sn55.7:2.3": "puissions-nous habiter dans un foyer rempli d’enfants, puissions-nous jouir du parfum de santal de Kassi, puissions-nous porter des guirlandes, parfums & cosmétiques, puissions-nous recevoir de l’or & de l’argent, et lors de la dissolution du corps, après la mort, puissions-nous réapparaître dans une bonne destination, dans un monde paradisiaque."
 }
