--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -17,5 +17,6 @@
   "sn55.7:2.4": "Puisque nous avons de tels désirs, de telles volontés, de tels souhaits, que le Sieur Gotama nous enseigne le Dhamma de telle manière que nous puissions habiter dans un foyer rempli d’enfants, que nous puissions jouir du parfum de santal de Kassi, que nous puissions porter des guirlandes, parfums & cosmétiques, que nous puissions recevoir de l’or & de l’argent, et qu’lors de la dissolution du corps, après la mort, nous puissions réapparaître dans une bonne destination, dans un monde paradisiaque.",
   "sn55.7:3.1": "— Maîtres de maison, je vais vous enseigner un exposé du Dhamma relatif à soi-même.",
   "sn55.7:3.2": "Écoutez cela et faites bien attention, je vais parler.",
-  "sn55.7:3.3": "— Oui, Sieur, répondirent les brahmanes maîtres de maison de Véloudvara."
+  "sn55.7:3.3": "— Oui, Sieur, répondirent les brahmanes maîtres de maison de Véloudvara.",
+  "sn55.7:3.4": "Le Fortuné dit alors :"
 }
