--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -18,5 +18,6 @@
   "sn55.7:3.1": "— Maîtres de maison, je vais vous enseigner un exposé du Dhamma relatif à soi-même.",
   "sn55.7:3.2": "Écoutez cela et faites bien attention, je vais parler.",
   "sn55.7:3.3": "— Oui, Sieur, répondirent les brahmanes maîtres de maison de Véloudvara.",
-  "sn55.7:3.4": "Le Fortuné dit alors :"
+  "sn55.7:3.4": "Le Fortuné dit alors :",
+  "sn55.7:4.1": "— Et quel est, maîtres de maison, l’exposé du Dhamma relatif à soi-même ?"
 }
