Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -20,5 +20,6 @@
   "sn55.7:3.3": "— Oui, Sieur, répondirent les brahmanes maîtres de maison de Véloudvara.",
   "sn55.7:3.4": "Le Fortuné dit alors :",
   "sn55.7:4.1": "— Et quel est, maîtres de maison, l’exposé du Dhamma relatif à soi-même ?",
-  "sn55.7:4.2": "À cet égard, un noble disciple considère ceci :"
+  "sn55.7:4.2": "À cet égard, un noble disciple considère ceci :",
+  "sn55.7:4.3": " ‘Je suis quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être."
 }
