--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -24,5 +24,6 @@
   "sn55.7:4.3": " ‘Je suis quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être.",
   "sn55.7:4.4": "Puisque je désire la vie, que je désire ne pas mourir, que je désire le bien-être et que je suis repoussé par le mal-être, si quelqu’un devait prendre ma vie, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:4.5": "Et si je devais prendre la vie de quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
-  "sn55.7:4.6": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre."
+  "sn55.7:4.6": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
+  "sn55.7:4.7": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’"
 }
