Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -28,5 +28,6 @@
   "sn55.7:4.7": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
   "sn55.7:4.8": "Ayant considéré ceci, il s’abstient lui-même de détruire la vie, il incite les autres à s’abstenir de détruire la vie, et il fait l’éloge du fait de s’abstenir de détruire la vie.",
   "sn55.7:4.9": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
-  "sn55.7:5.1": "De plus, maîtres de maison, un noble disciple considère ceci :"
+  "sn55.7:5.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
+  "sn55.7:5.2": "‘Si quelqu’un devait se saisir de ce que je n’ai pas donné, dans un acte considéré comme du vol, cela ne me serait pas agréable ni plaisant."
 }
