--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -30,5 +30,6 @@
   "sn55.7:4.9": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
   "sn55.7:5.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
   "sn55.7:5.2": "‘Si quelqu’un devait se saisir de ce que je n’ai pas donné, dans un acte considéré comme du vol, cela ne me serait pas agréable ni plaisant.",
-  "sn55.7:5.3": "Et si je devais me saisir de ce qu’un autre ne m’aurait pas donné, dans un acte considéré comme du vol, cela ne serait pas non plus agréable ni plaisant pour cette autre personne."
+  "sn55.7:5.3": "Et si je devais me saisir de ce qu’un autre ne m’aurait pas donné, dans un acte considéré comme du vol, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
+  "sn55.7:5.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre."
 }
