Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -36,5 +36,6 @@
   "sn55.7:5.6": "Ayant considéré ceci, il s’abstient lui-même de se saisir de ce qui n’a pas été donné, il incite les autres à s’abstenir de se saisir de ce qui n’a pas été donné, et il fait l’éloge du fait de s’abstenir de se saisir de ce qui n’a pas été donné.",
   "sn55.7:5.7": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
   "sn55.7:6.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
-  "sn55.7:6.2": "‘Si quelqu’un devait commettre un adultère avec ma femme, cela ne me serait pas agréable ni plaisant."
+  "sn55.7:6.2": "‘Si quelqu’un devait commettre un adultère avec ma femme, cela ne me serait pas agréable ni plaisant.",
+  "sn55.7:6.3": "Et si je devais commettre un adultère avec la femme d’un autre, cela ne serait pas non plus agréable ni plaisant pour cette autre personne."
 }
