Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -44,5 +44,6 @@
   "sn55.7:6.7": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
   "sn55.7:7.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
   "sn55.7:7.2": "‘Si quelqu’un devait porter atteinte à mon bien-être avec des paroles fausses, cela ne me serait pas agréable ni plaisant.",
-  "sn55.7:7.3": "Et si je devais porter atteinte au bien-être d’un autre avec des paroles fausses, cela ne serait pas non plus agréable ni plaisant pour cette autre personne."
+  "sn55.7:7.3": "Et si je devais porter atteinte au bien-être d’un autre avec des paroles fausses, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
+  "sn55.7:7.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre."
 }
