Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -48,5 +48,6 @@
   "sn55.7:7.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
   "sn55.7:7.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
   "sn55.7:7.6": "Ayant considéré ceci, il s’abstient lui-même des paroles fausses, il incite les autres à s’abstenir des paroles fausses, et il fait l’éloge du fait de s’abstenir des paroles fausses.",
-  "sn55.7:7.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières."
+  "sn55.7:7.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
+  "sn55.7:8.1": "De plus, maîtres de maison, un noble disciple considère ceci :"
 }
