Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -64,5 +64,6 @@
   "sn55.7:10.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
   "sn55.7:10.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
   "sn55.7:10.6": "Ayant considéré ceci, il s’abstient lui-même des bavardages infructueux, il incite les autres à s’abstenir des bavardages infructueux, et il fait l’éloge du fait de s’abstenir des bavardages infructueux.",
-  "sn55.7:10.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières."
+  "sn55.7:10.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
+  "sn55.7:11.1": "Il possède une confiance vérifiée dans le Bouddha : ‘Assurément, ce Fortuné est un arahant véritablement éveillé, accompli en connaissance et en [bonne] conduite, sublime, connaisseur du monde, suprême guide des personnes désirant l’entraînement, enseignant des dévas et des humains, un Fortuné éveillé.’"
 }
