Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -25,7 +25,7 @@
   "sn55.7:4.4": "Puisque je désire la vie, que je désire ne pas mourir, que je désire le bien-être et que je suis repoussé par le mal-être, si quelqu’un devait prendre ma vie, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:4.5": "Et si je devais prendre la vie de quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
   "sn55.7:4.6": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
-  "sn55.7:4.7": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
+  "sn55.7:4.7": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?”",
   "sn55.7:4.8": "Ayant considéré ceci, il s’abstient lui-même de détruire la vie, il incite les autres à s’abstenir de détruire la vie, et il fait l’éloge du fait de s’abstenir de détruire la vie.",
   "sn55.7:4.9": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
   "sn55.7:5.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
