Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -46,7 +46,7 @@
   "sn55.7:7.2": "“Si quelqu’un devait porter atteinte à mon bien-être avec des paroles fausses, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:7.3": "Et si je devais porter atteinte au bien-être d’un autre avec des paroles fausses, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
   "sn55.7:7.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
-  "sn55.7:7.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
+  "sn55.7:7.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?”",
   "sn55.7:7.6": "Ayant considéré ceci, il s’abstient lui-même des paroles fausses, il incite les autres à s’abstenir des paroles fausses, et il fait l’éloge du fait de s’abstenir des paroles fausses.",
   "sn55.7:7.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
   "sn55.7:8.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
