Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -62,7 +62,7 @@
   "sn55.7:10.2": "“Si quelqu’un devait s’adresser à moi avec des paroles frivoles et des bavardages infructueux, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:10.3": "Et si je devais m’adresser à un autre avec des paroles frivoles et des bavardages infructueux, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
   "sn55.7:10.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
-  "sn55.7:10.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
+  "sn55.7:10.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?”",
   "sn55.7:10.6": "Ayant considéré ceci, il s’abstient lui-même des bavardages infructueux, il incite les autres à s’abstenir des bavardages infructueux, et il fait l’éloge du fait de s’abstenir des bavardages infructueux.",
   "sn55.7:10.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
   "sn55.7:11.1": "Il possède une confiance vérifiée dans le Bouddha :",
