Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -1,4 +1,5 @@
 {
   "pli-tv-bu-pm:9.1": "If a monk, after taking on the monks’ training and way of life, without first renouncing the training and revealing his weakness, has sexual intercourse, even with a female animal, he is expelled and excluded from the community.",
+  "pli-tv-bu-pm:10.0": "Expulsion 2. Stealing",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
