Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -4,5 +4,6 @@
   "pli-tv-bu-pm:10.0": "Expulsion 2. Stealing",
   "pli-tv-bu-pm:10.2": "the sort of stealing for which kings, having caught a thief, would beat, imprison, or banish him, saying, ‘You’re a bandit, you’re a fool, you’ve gone astray, you’re a thief’",
   "pli-tv-bu-pm:10.3": "—he too is expelled and excluded from the community. ",
+  "pli-tv-bu-pm:11.0": "Expulsion 3. Killing",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
