Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -6,6 +6,6 @@
   "pli-tv-bu-pm:10.3": "—he too is expelled and excluded from the community. ",
   "pli-tv-bu-pm:11.0": "Expulsion 3. Killing",
   "pli-tv-bu-pm:11.1": "If a monk intentionally kills a human being or seeks an instrument of death for him or praises death or incites someone to die, saying, ",
-  "pli-tv-bu-pm:11.2": "‘My friend, what’s the point of this miserable and difficult life? Death is better for you than life!’\n",
+  "pli-tv-bu-pm:11.2": "‘My friend, what’s the point of this miserable and difficult life? Death is better for you than life!’—\n",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
