Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -11,5 +11,6 @@
   "pli-tv-bu-pm:11.4": "—he too is expelled and excluded from the community. ",
   "pli-tv-bu-pm:12.0": "Expulsion 3. Superhuman Qualities",
   "pli-tv-bu-pm:12.1": "If a monk falsely claims for himself a superhuman quality, a knowledge and vision worthy of the noble ones, saying, ‘This I know, this I see,’ ",
+  "pli-tv-bu-pm:12.2": "but after some time—whether he is questioned or not, but having committed the offense and seeking purification—should say: ‘Not knowing I said that I know, not seeing that I see; what I said was empty and false,’ then, ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
