Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -14,5 +14,6 @@
   "pli-tv-bu-pm:12.2": "but after some time—whether he is questioned or not, but having committed the offense and seeking purification—should say: ‘Not knowing I said that I know, not seeing that I see; what I said was empty and false,’ then, ",
   "pli-tv-bu-pm:12.3": "except if it is due to overestimation, ",
   "pli-tv-bu-pm:12.4": "he too is expelled and excluded from the community.",
+  "pli-tv-bu-pm:13.1": "“Venerables, the four rules on expulsion have been recited. ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
