Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -15,5 +15,6 @@
   "pli-tv-bu-pm:12.3": "except if it is due to overestimation, ",
   "pli-tv-bu-pm:12.4": "he too is expelled and excluded from the community.",
   "pli-tv-bu-pm:13.1": "“Venerables, the four rules on expulsion have been recited. ",
+  "pli-tv-bu-pm:13.2": "If a monk commits any one of them, he is no longer part of the community of monks. ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
