Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -17,5 +17,6 @@
   "pli-tv-bu-pm:13.1": "“Venerables, the four rules on expulsion have been recited. ",
   "pli-tv-bu-pm:13.2": "If a monk commits any one of them, he is no longer part of the community of monks. ",
   "pli-tv-bu-pm:13.3": "As before, so after: he’s expelled and excluded from the community. ",
+  "pli-tv-bu-pm:13.4": "In regard to this I ask you, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
