Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -23,5 +23,6 @@
   "pli-tv-bu-pm:13.6": "A third time I ask, ‘Are you pure in this?’ \n",
   "pli-tv-bu-pm:13.7": "You are pure in this and therefore silent. I will remember it thus.’ ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. ",
-  "pli-tv-bu-pm:14.1": "Venerables, these thirteen rules on suspension come up for recitation. "
+  "pli-tv-bu-pm:14.1": "Venerables, these thirteen rules on suspension come up for recitation. ",
+  "pli-tv-bu-pm:15.1": "Intentional emission of semen, except while dreaming, is an offense entailing suspension. "
 }
