Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -1,5 +1,6 @@
 {
   "pli-tv-bi-pm:10.1": "If a nun, intending to steal, takes from an inhabited area or from the wilderness what has not been given to him—",
   "pli-tv-bi-pm:10.2": "the sort of stealing for which kings, having caught a thief, would beat, imprison, or banish her, saying, ‘You’re a bandit, you’re a fool, you’ve gone astray, you’re a thief’",
-  "pli-tv-bi-pm:10.3": "—she is expelled and excluded from the community. "
+  "pli-tv-bi-pm:10.3": "—she is expelled and excluded from the community. ",
+  "pli-tv-bi-pm:11.0": "Expulsion 3. Killing"
 }
