Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -9,5 +9,6 @@
   "pli-tv-bi-pm:11.4": "—she too is expelled and excluded from the community. ",
   "pli-tv-bi-pm:12.1": "If a nun falsely claims for himself a superhuman quality, a knowledge and vision worthy of the noble ones, saying, ‘This I know, this I see,’ ",
   "pli-tv-bi-pm:12.2": "but after some time—whether she is questioned or not, but having committed the offense and seeking purification—should say: ‘Not knowing I said that I know, not seeing that I see; what I said was empty and false,’ then, ",
-  "pli-tv-bi-pm:12.3": "except if it is due to overestimation, "
+  "pli-tv-bi-pm:12.3": "except if it is due to overestimation, ",
+  "pli-tv-bi-pm:12.4": "she too is expelled and excluded from the community. "
 }
