Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -1,4 +1,5 @@
 {
+  "pli-tv-bi-pm:8.1": "Venerables, these eight rules on expulsion come up for recitation. ",
   "pli-tv-bi-pm:9.0": "Expulsion 1. Sexual Intercourse",
   "pli-tv-bi-pm:9.1": "If a nun, willingly has sexual intercourse, even with a male animal, she is expelled and excluded from the community.",
   "pli-tv-bi-pm:10.0": "Expulsion 2. Stealing",
