Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -19,5 +19,6 @@
   "pli-tv-bi-pm:17.2": "If a nun commits any one of them, he is no longer part of the community of nuns. ",
   "pli-tv-bi-pm:17.3": "As before, so after: she’s expelled and excluded from the community. ",
   "pli-tv-bi-pm:17.4": "In regard to this I ask you, ‘Are you pure in this?’ ",
-  "pli-tv-bi-pm:17.5": "A second time I ask, ‘Are you pure in this?’ "
+  "pli-tv-bi-pm:17.5": "A second time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bi-pm:17.6": "A third time I ask, ‘Are you pure in this?’ "
 }
