Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -22,5 +22,6 @@
   "pli-tv-bi-pm:17.5": "A second time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bi-pm:17.6": "A third time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bi-pm:17.7": "You are pure in this and therefore silent. I will remember it thus.’ ",
-  "pli-tv-bi-pm:17.8": "The offenses entailing expulsion are finished. "
+  "pli-tv-bi-pm:17.8": "The offenses entailing expulsion are finished. ",
+  "pli-tv-bi-pm:18.1": "Venerables, these seventeen rules on suspension come up for recitation. "
 }
