Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -17,6 +17,7 @@
   "pli-tv-bi-pm:12.4": "she too is expelled and excluded from the community. ",
   "pli-tv-bi-pm:13.1": "If a lustful nun consents to a lustful man making physical contact with her, to touching her, to taking hold of her, to contacting her, or to squeezing her, anywhere below the collar bone but above the knees, she too is expelled and excluded from the community. The training rule on above the knees. \n",
   "pli-tv-bi-pm:14.1": "If a nun knows that a nun has committed an offense entailing expulsion, but she neither confronts her herself nor tells a group of nuns, and afterward—whether that nun remains or has died or has been expelled or has converted—she says, ‘Venerables, although I previously knew that this nun was like this, I thought, I will neither confront her myself nor tell a group of nuns, she too is expelled and excluded from the community. The training rule on those who conceal offenses. \n",
+  "pli-tv-bi-pm:15.1": "If a nun takes sides with a monk who has been ejected by a unanimous Sangha—in accordance with the rule, the Monastic Law, and the Teacher’s instruction—and who is disrespectful, who has not made amends, and who has not made friends, the nuns should correct her like this: ",
   "pli-tv-bi-pm:17.1": "“Venerables, the eight rules on expulsion have been recited. ",
   "pli-tv-bi-pm:17.2": "If a nun commits any one of them, he is no longer part of the community of nuns. ",
   "pli-tv-bi-pm:17.3": "As before, so after: she’s expelled and excluded from the community. ",
